[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/UI Pack RPG/panelInset_beigeLight.png" type="Texture" id=2]
[ext_resource path="res://assets/UI Pack RPG/buttonLong_beige.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/kenney/error_003.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/hud/clock2.png" type="Texture" id=5]
[ext_resource path="res://assets/hud/clock1.png" type="Texture" id=6]
[ext_resource path="res://src/script/mission/Exam.gd" type="Script" id=7]
[ext_resource path="res://assets/audio/kenney/confirmation_002.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/kenney/metalClick.ogg" type="AudioStream" id=9]
[ext_resource path="res://src/scene/player.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/audio/soundtrack/The Arrival (BATTLE II).ogg" type="AudioStream" id=11]
[ext_resource path="res://src/scene/background.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/scene/Enemy/Tree.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/UI Pack RPG/cancel.png" type="Texture" id=14]
[ext_resource path="res://assets/hud/clock3.png" type="Texture" id=15]
[ext_resource path="res://assets/UI Pack RPG/buttonLong_beige2.png" type="Texture" id=16]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 190, 45 )

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 190, 45 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 190, 49 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/font/Kanit-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 3 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 190, 45 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 190, 49 )

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="AnimationNodeStateMachinePlayback" id=7]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/font/Kanit-Regular.ttf"

[sub_resource type="DynamicFont" id=9]
size = 60
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://assets/font/Kanit-Regular.ttf"

[sub_resource type="DynamicFont" id=11]
size = 51
font_data = SubResource( 10 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 512, 512 )

[node name="Mission1" type="Node2D"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -28.7401
margin_top = -46.0
margin_right = 1359.26
margin_bottom = 788.0
color = Color( 0.309804, 0.529412, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" parent="." instance=ExtResource( 12 )]
position = Vector2( -89.09, -14.2544 )

[node name="answer1" type="Button" parent="."]
margin_left = 41.0
margin_top = 483.0
margin_right = 541.0
margin_bottom = 582.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="answer1"]
margin_left = 20.0
margin_top = 8.0
margin_right = 499.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ABCDEFG"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer2" type="Button" parent="."]
margin_left = 782.0
margin_top = 483.0
margin_right = 1282.0
margin_bottom = 582.0
custom_styles/hover = SubResource( 1 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="answer2"]
margin_left = 12.1483
margin_top = -0.475708
margin_right = 491.148
margin_bottom = 91.5243
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ABCDEFG"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer3" type="Button" parent="."]
margin_left = 41.0
margin_top = 607.0
margin_right = 541.0
margin_bottom = 706.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="answer3"]
margin_left = 17.881
margin_top = 6.89771
margin_right = 496.881
margin_bottom = 98.8977
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ABCDEFG"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer4" type="Button" parent="."]
margin_left = 782.0
margin_top = 607.0
margin_right = 1282.0
margin_bottom = 706.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="answer4"]
margin_left = 5.79144
margin_top = 0.540894
margin_right = 484.791
margin_bottom = 92.5409
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ABCDEFG"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="TextureRect" parent="."]
margin_left = 110.775
margin_top = 320.368
margin_right = 203.775
margin_bottom = 414.368
rect_scale = Vector2( 12, 1.5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label question" type="Label" parent="."]
margin_left = 118.0
margin_top = 327.0
margin_right = 1226.0
margin_bottom = 461.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ABCDEFG"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clock3" type="Sprite" parent="."]
position = Vector2( 660.198, 63.0053 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 15 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 613.722
margin_top = 30.4682
margin_right = 823.722
margin_bottom = 215.468
rect_scale = Vector2( 0.5, 0.5 )
max_value = 60.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 10 )]
position = Vector2( 1114.71, 147.143 )
walk = false

[node name="Camera2D" parent="player" index="1"]
visible = false
current = false

[node name="AnimationTreePlayer" parent="player" index="5"]
parameters/StateMachine/playback = SubResource( 7 )

[node name="Tree" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( 232.06, 159.184 )
scale = Vector2( 0.1, 0.1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioCorrect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="AudioWrong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="AudioBG" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="answer" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="answer"]
margin_left = 38.0
margin_top = 267.0
margin_right = 1269.0
margin_bottom = 765.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="answer"]
margin_left = 333.956
margin_top = 270.141
margin_right = 1018.96
margin_bottom = 430.141
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "เฉลย"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q" type="Label" parent="answer"]
margin_left = 49.8398
margin_top = 415.907
margin_right = 1277.84
margin_bottom = 575.907
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "XXXXXXXXXXXX"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="Label" parent="answer"]
margin_left = 37.1262
margin_top = 560.95
margin_right = 1265.13
margin_bottom = 720.95
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "XXXXXXXXXXX"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="answer"]
margin_left = 1167.38
margin_top = 229.093
margin_right = 1296.38
margin_bottom = 356.093
custom_styles/normal = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_answer" type="Timer" parent="answer"]
wait_time = 1.5

[node name="line" type="ColorRect" parent="answer"]
margin_left = 44.0
margin_top = 577.0
margin_right = 1261.0
margin_bottom = 586.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line2" type="ColorRect" parent="answer"]
margin_left = 44.0
margin_top = 410.0
margin_right = 1261.0
margin_bottom = 419.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line3" type="ColorRect" parent="answer"]
margin_left = 45.0
margin_top = 717.0
margin_right = 1262.0
margin_bottom = 726.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="."]
[connection signal="button_down" from="answer1" to="." method="_on_answer1_button_down"]
[connection signal="mouse_entered" from="answer1" to="." method="_on_answer1_mouse_entered"]
[connection signal="button_down" from="answer2" to="." method="_on_answer2_button_down"]
[connection signal="mouse_entered" from="answer2" to="." method="_on_answer2_mouse_entered"]
[connection signal="button_down" from="answer3" to="." method="_on_answer3_button_down"]
[connection signal="mouse_entered" from="answer3" to="." method="_on_answer3_mouse_entered"]
[connection signal="button_down" from="answer4" to="." method="_on_answer4_button_down"]
[connection signal="mouse_entered" from="answer4" to="." method="_on_answer4_mouse_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="answer/Button" to="." method="_on_Button_button_down"]
[connection signal="timeout" from="answer/Timer_answer" to="." method="_on_Timer_answer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="player"]
